# scribe

./: .gitignore  Cargo.toml  README.md  README_zh.md  config.toml
article/: README.md  first-post.md
article/test_1/: minecraft.md
backend/: .gitignore  Cargo.toml  config.toml
backend/article/: README.md  first-post.md
backend/article/test_1/: minecraft.md
backend/migrations/20240524120000_create_comments/: down.sql  up.sql
backend/notes/: sample-note.md
backend/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  services.rs
backend/src/handlers/: article_versions.rs  articles.rs  auth.rs  categories.rs  comments.rs  error.rs  notes.rs  search.rs  sitemap.rs  tags.rs  users.rs
backend/src/models/: article.rs  user.rs  user_preferences.rs  version.rs
backend/src/server/: app.rs  auth.rs  cache.rs
backend/src/services/: article_service.rs  comment_service.rs  search.rs  service.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/components/: AuthorMenu.vue  StateWrapper.vue  UserMenu.vue
frontend/src/composables/: useApi.js  useAuth.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/utils/: storage.js
frontend/src/views/: ArticleNewView.vue  ArticleVersionView.vue  ArticleView.vue  AuthCallbackView.vue  AuthGuard.vue  CategoriesView.vue  HomeView.vue  LoginView.vue  NoteView.vue  NotesView.vue  SearchView.vue  TagsView.vue
scripts/: dev.sh
src/: config.rs  error.rs  handlers.rs  main.rs  models.rs  server.rs  services.rs
src/handlers/: article_versions.rs  articles.rs  auth.rs  categories.rs  comments.rs  error.rs  root.rs  search.rs  sitemap.rs  tags.rs
src/models/: article.rs  version.rs
src/server/: app.rs  auth.rs  cache.rs
src/services/: article_service.rs  search.rs  service.rs
