[package]
name = "scribe"
version = "0.3.0"
edition = "2024"

[dependencies]
# Web 框架
axum = "0.8.4"

# 异步
tokio = { version = "1.47.1", features = ["full"] }

# 日志
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# 数据序列化和反序列化
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
serde_yaml = "0.9.33"
toml = "0.9.5"
gray_matter = "0.3.2"

# 错误处理
thiserror = "2.0.16"

# 时间库
chrono = { version = "0.4.41", features = ["serde"] }

# 文件系统监听
notify = "8.2.0"

# 文件遍历
walkdir = "2.5.0"

# 全文搜索
tantivy = "0.25.0"
