[package]
name = "scribe-backend"
version = "0.3.0"
edition = "2024"

[dependencies]
# Web 框架
axum = "0.8.4"

# 异步
tokio = { version = "1.47.1", features = ["full"] }

# 日志
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# 数据序列化和反序列化
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
serde_yaml = "0.9.33"
toml = "0.9.5"
gray_matter = "0.3.2"
dotenvy = "0.15"

# 缓存
moka2 = { version = "0.13.0", features = ["future"] }
bytes = "1.6"
tower = "0.5"

# 错误处理
thiserror = "2.0.16"

# cryptography
sha2 = "0.10"
subtle = "2.5"
hex = "0.4"

# 时间库
chrono = { version = "0.4.41", features = ["serde"] }

# 文件系统监听
notify = "8.2.0"

# 文件遍历
walkdir = "2.5.0"

# 全文搜索
tantivy = "0.25.0"

# OAuth2 支持
oauth2 = { version = "4.4.2", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"] }
cookie = { version = "0.18", features = ["key-expansion"] }
slug = "0.1"

[dev-dependencies]
tempfile = "3.10"
